set java.security.manager=allow in Ant launcher .bat file for Windows, for Java 18