@@ -122,6 +122,13 @@ goto checkJikes
 :noJavaHome
 if "%_JAVACMD%" == "" set _JAVACMD=java.exe
 
+:setSecurityManagerOpt
+"%_JAVACMD%" -XshowSettings:properties 2>&1 | find "java.specification.version = 18"
+if "%ErrorLevel%" == "0" (
+    rem This is Java 18, so set -Djava.security.manager=allow
+    set ANT_OPTS="%ANT_OPTS% -Djava.security.manager=allow"
+)
+
 :checkJikes
 if not "%JIKESPATH%"=="" goto runAntWithJikes
 
